# CompSciProject

./: CMakeLists.txt  database.db
src/Client/: TCPClient.hpp  main.cpp
src/Common/: Math.hpp  Packet.hpp  SHA256.hpp
src/MainGame/: GameManager.hpp  Math.hpp  Player.hpp  Question.hpp  main.cpp
src/MainGame/Object/: Object.hpp
src/MainGame/Object/Objects/: Obstacle.hpp
src/Server/: DatabaseWrapper.hpp  TCPConnection.hpp  TCPServer.hpp  main.cpp
